manifests/woodpecker/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woodpecker-external
  namespace: woodpecker
  annotations:
    cert-manager.io/cluster-issuer: acme
    meta.helm.sh/release-name: woodpecker
    meta.helm.sh/release-namespace: woodpecker
spec:
  tls:
    - hosts:
        - ci.omni.ms
      secretName: woodpecker-external-tls
  rules:
    - host: ci.omni.ms
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: woodpecker-server
                port:
                  number: 80
